- 在父工程和子工程中添加字符集配置，解决编码问题 - 引入变量 ${java.version} 以动态设置 Java 编译版本 - 更新 CGLIB 依赖版本并添加反射访问限制的解决方法